#115 adapt PlayerClasses and added missing classes, also mapper