@@ -5,6 +5,8 @@ import de.uol.swp.common.player.IPlayerDTO;
 import de.uol.swp.common.player.PlayerDTO;
 import de.uol.swp.server.cards.CardMapper;
 import de.uol.swp.server.city.CityMapper;
+import de.uol.swp.server.role.RoleMapper;
+import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -15,6 +17,7 @@ import java.util.stream.Collectors;
  * This class is crucial for abstracting the player details that need to be sent over the network.
  * It handles the conversion of player data, including their current city and held cards, into a transferable format.
  */
+@NoArgsConstructor(access = lombok.AccessLevel.PRIVATE)
 public class PlayerMapper {
 
     /**
@@ -28,13 +31,12 @@ public class PlayerMapper {
         return new PlayerDTO(
                 player.getUser()
                       .getUsername(),
-                player.getRole()
-                      .getName(),
+                RoleMapper.toRoleDTO(player.getRole()),
                 (CityDTO) CityMapper.toDTO(player.getCurrentPosition()),
                 player.getCards()
                       .stream()
                       .map(CardMapper::toDTO)
-                      .collect(Collectors.toList())
+                      .toList()
         );
     }
 
@@ -52,13 +54,12 @@ public class PlayerMapper {
             PlayerDTO playerDTO = new PlayerDTO(
                     player.getUser()
                           .getUsername(),
-                    player.getRole()
-                          .getName(),
+                    RoleMapper.toRoleDTO(player.getRole()),
                     (CityDTO) CityMapper.toDTO(player.getCurrentPosition()),
                     player.getCards()
                           .stream()
                           .map(CardMapper::toDTO)
-                          .collect(Collectors.toList())
+                          .toList()
             );
             playerDTOS.add(playerDTO);
         }
